Bug 262036 - Tellico fails to find some IMDB data
Summary: Tellico fails to find some IMDB data
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.2
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-04 07:56 UTC by Robby Stephenson
Modified: 2011-01-04 08:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2011-01-04 07:56:11 UTC
Version:           2.3.2 (using KDE 4.5.4) 
OS:                Linux

Forum post from user: http://forum.kde.org/viewtopic.php?f=200&t=92204&p=183992

for example, when searching takasi miike's 46-okunen no koi, some important fields in the IMDb page that tellico fails to retrieve:

Genre
Plot Summary
Director
IMDB Link
Cover

Reproducible: Didn't try
Comment 1 Robby Stephenson 2011-01-04 08:00:50 UTC
SVN commit 1211442 by rstephenson:

Fix parsing bug with IMDb results.

BUG: 262036


 M  +4 -0      ChangeLog  
 M  +5 -2      src/fetch/imdbfetcher.cpp  
 M  +24 -0     src/tests/imdbfetchertest.cpp  
 M  +1 -0      src/tests/imdbfetchertest.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1211442