Fix parsing bug with IMDb results.

BUG: 262036

svn path=/trunk/extragear/office/tellico/; revision=1211442